clusters/apps/workloads/authentik/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
  labels:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/part-of: fleet
    app.kubernetes.io/managed-by: argocd
